--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 beautifulsoup4==4.6.0
 certifi==2017.7.27.1
 chardet==3.0.4
-Django==1.11.4
+dj-database-url==0.4.2
+Django==2.0.2
 djangorestframework==3.7.7
+gunicorn==19.7.1
 html5lib==0.999999999
 idna==2.6
 lxml==3.8.0
@@ -10,8 +12,9 @@ numpy==1.14.0
 pandas==0.22.0
 psycopg2==2.7.4
 python-dateutil==2.6.1
-pytz==2017.2
+pytz==2018.3
 requests==2.18.4
 six==1.10.0
 urllib3==1.22
 webencodings==0.5.1
+whitenoise==3.3.1
