--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-beautifulsoup4==4.6.0
+asgiref==3.2.3
+beautifulsoup4==4.8.1
 certifi==2018.11.29
 chardet==3.0.4
 dj-database-url==0.4.2
-Django==2.0.2
+Django==3.0
 djangorestframework==3.7.7
 gunicorn==19.7.1
 html5lib==0.999999999
@@ -15,6 +16,8 @@ python-dateutil==2.6.1
 pytz==2018.3
 requests==2.21.0
 six==1.10.0
+soupsieve==1.9.5
+sqlparse==0.3.0
 urllib3==1.24.1
 webencodings==0.5.1
-whitenoise==3.3.1
+whitenoise==5.0.1
